--- a/style.css
+++ b/style.css
@@ -1,54 +1,8 @@
-body {
-    text-align: center;
-    margin: 0;
+body #home {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: larger;
 }
 
-header {
-    margin: 0;
-    background-color: #000;
-    color:yellow;    
-    padding: 50px;
-}
-
-
-.content {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 0;
-    padding: 60px 30px 230px;
-    background-color: #3b5510;
-    color: #fff;
-}
-
-.wrapper-linguagens {
-    text-align: left;
-}
-
-h1 {
-    margin: 0;
-    font-size: 3em;
-}
-
-a {
-    color: yellowgreen;
-}
-
-
-
-footer {
-    text-align: left;
-    margin: 0;
-    background-color: #000;
-    color:yellow;    
-    padding: 40px 40px 80px;
-    position: relative;
-
-}
-
-.copyright {
-    text-align: center;
-    position: absolute;
-    left: 590px;
-    bottom: 6px;
+body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
